--- a/deployment/database/crdr-reconciliation/src/cross-region-orders-db-ssm.yaml
+++ b/deployment/database/crdr-reconciliation/src/cross-region-orders-db-ssm.yaml
@@ -45,7 +45,7 @@ Resources:
             description: "(Required) Arn of the cross region DR snapshot"
             default: ""           
         schemaVersion: '0.3'
-        assumeRole: !Sub '{{resolve:secretsmanager:mr-app/CRDRSSMAutomationRoleArn}}'   
+        assumeRole: !Sub '{{resolve:secretsmanager:mr-app/CRDRSSMAutomationRoleArn${Env}}}'   
         mainSteps:          
           - name: CopyFailoverSnapshot
             action: 'aws:executeScript'
