Added restart services after setting up rotation

--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -21,7 +21,7 @@ COMPOSE_DOCKER_CLI_BUILD=0
 
 deploy-all: test-creds create-peer primary_infrastructure primary_ecs standby_infrastructure standby_ecs global_routing \
 	canaries_primary canaries_standby failover_primary failover_standby client-primary client-standby restore-reconciliation monitoring \
-	secrets-rotation chaos-engineering
+	secrets-rotation restart-services chaos-engineering
 deploy-ecs-primary: test-creds primary_infrastructure primary_ecs
 
 deploy: deploy-all
@@ -251,6 +251,14 @@ secrets-rotation: primary_region_orders-db primary_region_catalog-db
 	$(eval result:=$(shell aws ssm get-parameter --name canaryBucketName$(ENV) --region $(PRIMARY_REGION) --query "Parameter.Value" --output text ))
 	@aws cloudformation package --template-file ./database/secrets-rotation/src/secrets-rotation.yaml --region ${PRIMARY_REGION} --s3-bucket $(result) --output-template-file ./database/secrets-rotation/src/out.yaml
 	@aws cloudformation deploy --template-file ./database/secrets-rotation/src/out.yaml --stack-name secrets-rotation${ENV} --region ${PRIMARY_REGION} --capabilities CAPABILITY_NAMED_IAM --parameter-overrides Env=${ENV} OrdersDBCredentialsSecretId=mr-app/orders-global-db-cluster-UserCredentials${ENV} CatalogDBCredentialsSecretId=mr-app/catalog-global-db-cluster-UserCredentials${ENV}
+
+restart-ecs-services: secrets-rotation
+	@echo "Restarting ECS Services"
+	@if [ "$(Env)" = "" ]; then \
+		./restart-services.sh --services catalog,orders; \
+	else \
+		./restart-services.sh --env $(Env) --services catalog,orders; \
+	fi
 
 chaos-engineering:
 	@echo "Creating chaos experiments in ${PRIMARY_REGION}"
